samples/_failures_safe/1761156097_8e84ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fef2989c.c: In function ‘main’:
./samples/SAFE/__tmp_fef2989c.c:146:16: error: expected ‘;’ at end of input
  146 |     token_count
      |                ^
      |                ;
./samples/SAFE/__tmp_fef2989c.c:146:5: error: expected declaration or statement at end of input
  146 |     token_count
      |     ^~~~~~~~~~~
